# app/controllers/hotels.ts
@@ -1,9 +1,11 @@
 import express from 'express';
 import User from '../models/user';
-import Hotel from "../models/hotel";
+import Hotel, { FiltersType } from '../models/hotel';
 
 export const getAllHotelsController = async (req: express.Request, res: express.Response) => {
-  res.send(await Hotel.getAll());
+  const filters: FiltersType = req.query as unknown as FiltersType;
+  if ((filters.from && !filters.to) || (!filters.from && filters.to)) return res.sendStatus(400);
+  res.send(await Hotel.getAll(filters));
 };
 
 export const getHotelController = async (req: express.Request, res: express.Response) => {
@@ -17,6 +19,9 @@ export const getHotelBookingsController = async (req: express.Request, res: expr
 };
 
 export const createBookingController = async (req: express.Request, res: express.Response) => {
-  const user = new User(req.body.userId);
+  const token = req.header('Jwt-Authorization') as string;
+  const user = await User.getUserByToken(token);
+  if (!user) return res.sendStatus(400);
+
   res.send(await user.bookRoom({ roomId: req.body.roomId, checkIn: req.body.checkIn, checkOut: req.body.checkOut }));
 };
