# swagger.yaml
@@ -16,6 +16,8 @@ tags:
     description: User data
   - name: hotel
     description: Hotel data
+  - name: booking
+    description: Reservation data
 paths:
   /:
     get:
@@ -89,11 +91,46 @@ paths:
                 type: string
         "404":
           description: there is no user with this email and password
-  /hotel:
+  /api/v1/hotel:
     get:
       tags:
         - hotel
       summary: All hotels
+      parameters:
+        - name: from
+          in: query
+          description: Date of possible checkin. Is required if "to" has been specified
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: string
+            format: date
+        - name: to
+          in: query
+          description: Date of possible checkout. Is required if "from" has been specified
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: string
+            format: date
+        - name: minPrice
+          in: query
+          description: Minimum price of the cheapest room in this hotel
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+        - name: maxPrice
+          in: query
+          description: Minimum price of the cheapest room in this hotel
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
       responses:
         "200":
           description: successful operation
@@ -103,6 +140,72 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Hotel'
+        "400":
+          description: filters are invalid
+  /api/v1/hotel/{hotelId}:
+    get:
+      tags:
+        - hotel
+      summary: Find a hotel by id
+      parameters:
+        - name: hotelId
+          in: path
+          description: ID of hotel to return
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FullHotel'
+  /api/v1/hotel/room/{roomId}/booking:
+    put:
+      tags:
+        - booking
+      summary: Create or edit a reservation from the current user
+      parameters:
+        - name: roomId
+          in: path
+          description: ID of room to book
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+        - name: Jwt-Authorization
+          in: header
+          description: JWT token got from login
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BookingInput'
+            example:
+              roomId: 1
+              checkIn: 2020-04-05
+              checkOut: 2020-04-09
+        required: true
+      responses:
+        "200":
+          description: successful operation
+        "404":
+          description: there is no such user
+        "400":
+          description: there is no such room or these dates are already booked
+        "401":
+          description: the JWT token is incorrect
 components:
   schemas:
     User:
@@ -129,6 +232,35 @@ components:
           type: string
       xml:
         name: Hotel
+    FullHotel:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        country:
+          type: string
+        city:
+          type: string
+        rooms:
+          type: array
+          items:
+            $ref: '#/components/schemas/Room'
+    Room:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        type:
+          type: string
+        price:
+          type: integer
+          format: decimal
     UserRegistration:
       type: object
       properties:
@@ -145,3 +277,15 @@ components:
           type: string
         password:
           type: string
+    BookingInput:
+      type: object
+      properties:
+        roomId:
+          type: integer
+          format: int64
+        checkIn:
+          type: string
+          format: date
+        checkOut:
+          type: string
+          format: date
